Добавлены переводы для страницы Terms и обновлен LanguageContext для поддержки массивов

--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -193,11 +193,173 @@
     },
     "terms": {
       "title": "Условия использования - Telegram Radar",
-      "description": "Условия использования сервиса Telegram Radar. Правила и ограничения использования сервиса."
+      "description": "Условия использования сервиса Telegram Radar. Правила и ограничения использования сервиса.",
+      "content": {
+        "heading": "Условия использования",
+        "lastUpdated": "Последнее обновление",
+        "acceptance": {
+          "title": "1. Принятие условий",
+          "text": "Используя сервис Telegram Radar (далее - «Сервис»), вы соглашаетесь с настоящими Условиями использования. Если вы не согласны с какими-либо условиями, пожалуйста, не используйте Сервис."
+        },
+        "description": {
+          "title": "2. Описание сервиса",
+          "text": "Telegram Radar - это сервис для автоматического мониторинга Telegram-каналов, фильтрации сообщений по ключевым словам и автоматической публикации в указанные каналы. Сервис предоставляется «как есть» без каких-либо гарантий."
+        },
+        "registration": {
+          "title": "3. Регистрация и учетная запись",
+          "text": "Для использования Сервиса необходимо:",
+          "items": [
+            "Иметь действующий аккаунт Telegram",
+            "Начать работу с ботом @radar_telegram_bot",
+            "Следовать инструкциям бота для настройки мониторинга"
+          ],
+          "responsibility": "Вы несете ответственность за сохранность доступа к вашему аккаунту Telegram и за все действия, совершенные с использованием вашего аккаунта."
+        },
+        "rules": {
+          "title": "4. Правила использования",
+          "text": "При использовании Сервиса запрещается:",
+          "items": [
+            "Использовать Сервис для незаконных целей",
+            "Нарушать права интеллектуальной собственности третьих лиц",
+            "Распространять спам, вредоносное ПО или контент, нарушающий права других",
+            "Пытаться взломать, нарушить работу или обойти ограничения Сервиса",
+            "Использовать Сервис для мониторинга контента без согласия владельцев каналов (где это требуется)",
+            "Нарушать правила использования Telegram"
+          ]
+        },
+        "pricing": {
+          "title": "5. Тарифы и оплата",
+          "text": "Сервис предоставляется на условиях различных тарифных планов:",
+          "items": [
+            "Бесплатный тариф - предоставляется навсегда с ограниченным функционалом",
+            "Платные тарифы - оплачиваются через Telegram Stars на ежемесячной основе",
+            "Оплата производится заранее за выбранный период",
+            "Возврат средств не предусмотрен, за исключением случаев технических сбоев"
+          ]
+        },
+        "liability": {
+          "title": "6. Ограничения ответственности",
+          "text": "Сервис предоставляется «как есть». Мы не гарантируем:",
+          "items": [
+            "Непрерывную и безошибочную работу Сервиса",
+            "Отсутствие задержек в обработке сообщений",
+            "Доступность всех каналов для мониторинга",
+            "Точность фильтрации по ключевым словам на 100%"
+          ],
+          "responsibility": "Мы не несем ответственности за контент, публикуемый через Сервис, и за последствия его использования."
+        },
+        "intellectual": {
+          "title": "7. Интеллектуальная собственность",
+          "text": "Все права на Сервис, включая дизайн, программное обеспечение, логотипы и торговые марки, принадлежат Telegram Radar. Вы не имеете права копировать, модифицировать или распространять материалы Сервиса без письменного разрешения."
+        },
+        "termination": {
+          "title": "8. Прекращение использования",
+          "text": "Мы оставляем за собой право приостановить или прекратить доступ к Сервису в случае:",
+          "items": [
+            "Нарушения настоящих Условий использования",
+            "Неоплаты платного тарифа",
+            "Технических работ или форс-мажорных обстоятельств",
+            "Нарушения правил использования Telegram"
+          ]
+        },
+        "changes": {
+          "title": "9. Изменения условий",
+          "text": "Мы оставляем за собой право изменять настоящие Условия использования в любое время. О существенных изменениях мы уведомим пользователей через Telegram бот или на сайте. Продолжение использования Сервиса после изменений означает ваше согласие с новыми условиями."
+        },
+        "contacts": {
+          "title": "10. Контакты",
+          "text": "По всем вопросам, связанным с использованием Сервиса, обращайтесь:",
+          "items": [
+            "Через Telegram бот: @radar_telegram_bot"
+          ]
+        },
+        "backToHome": "← Вернуться на главную"
+      }
     },
     "privacy": {
       "title": "Политика конфиденциальности - Telegram Radar",
-      "description": "Политика конфиденциальности Telegram Radar. Информация о сборе, использовании и защите персональных данных."
+      "description": "Политика конфиденциальности Telegram Radar. Информация о сборе, использовании и защите персональных данных.",
+      "content": {
+        "heading": "Политика конфиденциальности",
+        "lastUpdated": "Последнее обновление",
+        "general": {
+          "title": "1. Общие положения",
+          "text1": "Настоящая Политика конфиденциальности определяет порядок обработки и защиты персональных данных пользователей сервиса Telegram Radar (далее - «Сервис»). Используя Сервис, вы соглашаетесь с условиями настоящей Политики конфиденциальности.",
+          "text2": "Администратор персональных данных: Telegram Radar. Контактная информация: через Telegram бот @radar_telegram_bot."
+        },
+        "data": {
+          "title": "2. Собираемые данные",
+          "text": "При использовании Сервиса мы можем собирать следующую информацию:",
+          "items": [
+            "Идентификатор пользователя Telegram (User ID)",
+            "Имя пользователя Telegram (если указано)",
+            "Настройки мониторинга каналов и ключевых слов",
+            "Информация о подключенных каналах публикации",
+            "Данные сессии Telegram (при подключении личного аккаунта)",
+            "Логи использования сервиса"
+          ]
+        },
+        "purposes": {
+          "title": "3. Цели обработки данных",
+          "text": "Персональные данные обрабатываются в следующих целях:",
+          "items": [
+            "Предоставление функционала мониторинга Telegram-каналов",
+            "Обработка и фильтрация сообщений по ключевым словам",
+            "Публикация сообщений в указанные каналы",
+            "Обеспечение безопасности и предотвращение злоупотреблений",
+            "Улучшение качества сервиса и разработка новых функций",
+            "Техническая поддержка пользователей"
+          ]
+        },
+        "storage": {
+          "title": "4. Хранение и защита данных",
+          "text": "Мы применяем современные методы защиты данных:",
+          "items": [
+            "Шифрование сессий Telegram при хранении",
+            "Безопасное хранение данных на защищенных серверах",
+            "Ограниченный доступ к персональным данным только для сотрудников, выполняющих свои служебные обязанности",
+            "Регулярное обновление систем безопасности"
+          ],
+          "retention": "Данные хранятся в течение срока действия вашей учетной записи и могут быть удалены по вашему запросу."
+        },
+        "sharing": {
+          "title": "5. Передача данных третьим лицам",
+          "text": "Мы не передаем ваши персональные данные третьим лицам, за исключением случаев:",
+          "items": [
+            "Когда это необходимо для предоставления сервиса (например, взаимодействие с Telegram API)",
+            "По требованию законодательства или судебных органов",
+            "Для защиты прав и безопасности пользователей"
+          ]
+        },
+        "rights": {
+          "title": "6. Права пользователей",
+          "text": "Вы имеете право:",
+          "items": [
+            "Получать информацию о ваших персональных данных",
+            "Требовать исправления неточных данных",
+            "Требовать удаления ваших персональных данных",
+            "Отозвать согласие на обработку данных",
+            "Ограничить обработку ваших данных"
+          ],
+          "contact": "Для реализации этих прав обратитесь к нам через Telegram бот @radar_telegram_bot."
+        },
+        "cookies": {
+          "title": "7. Cookies и аналогичные технологии",
+          "text": "Сервис использует минимально необходимые технические данные для обеспечения работы функционала. Мы не используем cookies для отслеживания пользователей."
+        },
+        "changes": {
+          "title": "8. Изменения в Политике конфиденциальности",
+          "text": "Мы оставляем за собой право вносить изменения в настоящую Политику конфиденциальности. О существенных изменениях мы уведомим пользователей через Telegram бот или на сайте."
+        },
+        "contacts": {
+          "title": "9. Контакты",
+          "text": "По всем вопросам, связанным с обработкой персональных данных, вы можете обратиться:",
+          "items": [
+            "Через Telegram бот: @radar_telegram_bot"
+          ]
+        },
+        "backToHome": "← Вернуться на главную"
+      }
     },
     "cases": {
       "crypto": {
